public/styles.css
/* Basic reset for styling */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* CSS to style links globally (optional) */
a {
    color: #3498db; /* A blue that's softer than the default */
    text-decoration: none; /* Removes the underline by default */
}

a:hover {
    text-decoration: underline; /* Underline on hover */
}

/* CSS to style links within the credit section */
#background-music-Credit a {
    color: #388497; /* A red color for the credit links */
    text-decoration: none; /* No underline */
}

#background-music-Credit a:hover {
    text-decoration: underline; /* Underline when hovering over credit links */
}
/* Center the text within the credit section */
#background-music-Credit {
    text-align: center; /* Align text to the center */
    margin: 10px 0; /* Optional: Add some spacing around the section */
}

body {
    font-family: 'Arial', sans-serif;
    background-color: #333; /* Adjust the color to match your background */
    color: #fff;
}
h2 {
    text-align: center;
}


/* Global styling */

@font-face {
    font-family: Bagnard;
    src: url(assets/fonts/BagnardSans.otf);
}

body {
    font-family: Bagnard;
}

button {
    font-family: Bagnard;   
}

/* Styling for the header section */
header {
    background-size: cover;
    padding: 20px;
    text-align: center;
    position: relative;
    color: #fff;
}
.top-left-controls {
    position: absolute; /* Allows it to "float" independently */
    left: 10; /* Fixes it to the left side */
    padding: 20px; /* Padding to maintain consistent spacing */
}
.logo {
    width: 50px; /* Adjust size as necessary */
    height: auto;
    vertical-align: middle;
}
.status {
    margin-top: 10px;
    font-size: 0.9em;
    color: #FFD700; /* Example to make the status more visible */
}
.center-content {
    flex-grow: 1; /* Allows this section to expand and center content */
    text-align: center; /* Centers the text and images */
}

.button-directory {
    background-color: #4CAF50; /* A green color for the directory button */
    color: white;
    border: none;
    padding: 6px 12px; /* Adjust padding to suit design */
    font-size: 0.9em;
    border-radius: 4px; /* A slightly different radius */
    cursor: pointer;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* A bit of shadow for depth */
    transition: background-color 0.3s, box-shadow 0.3s;
}

.button-directory:hover {
    background-color: #367C39; /* Darker green on hover */
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25); /* Deeper shadow for a 3D effect on hover */
}
.header-content {
    display: flex;
    align-items: center;
    justify-content: space-between; /* Ensures the center-content remains centered */
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 8px;
    padding: 20px;
}

/* Title styling within each section */
.section h2 {
    margin-bottom: 20px; /* Increased margin for better visual separation */
}

/* Button styling */
button {
    background-color: #555; /* Adjust the color to your preference */
    border: none;
    color: white;
    padding: 10px 20px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin: 4px 2px;
    cursor: pointer;
    border-radius: 5px;
}

/* Specific styling for different types of buttons if needed */
.button-primary {
    background-color: #008CBA; /* Blue */
}

.button-secondary {
    background-color: #f44336; /* Red */
}

/* For the intensity slider */
.intensity-slider {
    width: 100%;
    margin: 10px 0;
}

/* Container for the sound buttons */
.sound-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 10px; /* Space between buttons */
}

/* Individual sound buttons */
.sound-button {
    flex-basis: calc(33.333% - 10px); /* Three buttons per row, adjust the space to match */
    text-align: center;
}

/* Styling for the bottom navigation */
nav {
    position: fixed;
    bottom: 0;
    width: 100%;
    background-color: #222;
    display: flex;
    justify-content: space-around;
    padding: 10px 0;
}

nav a {
    color: white;
    text-decoration: none;
    padding: 10px;
    display: block;
}

.button-play {
    background-color: #4CAF50; /* Green for playing */
    color: white;
    display: block; /* Change display to block */
}

.button-stop {
    background-color: #f44336; /* Red for stopped */
    color: white;
    display: block; /* Change display to block */
}

.button-stop:disabled {
    background-color: #803d38;
    cursor: not-allowed;
}


/* Icons styling */
.icon {
    height: 80px;
    width: 100%;
}

/* Section styling */
.section {
    padding: 20px;
    display: grid; /* Change display to grid */
    grid-template-columns: repeat(auto-fill, minmax(175px, 1fr)); /* Set columns to auto-fill with a minimum width of 200px */
    grid-auto-rows: minmax(50px, auto); /* Set rows to automatically adjust height */
    gap: 20px; /* Add gap between grid items */
    align-items: center;
    justify-content: center;
}
.button {
    flex: 1 0 auto;
    text-align: center;
    text-transform: capitalize;
    /* Add any additional styling for buttons */
}

.button .volume-slider {
    display: block;
    margin-top: 15px;
    width: 100%;
}

.progress-bar-container {
    position: relative;
    width: 100%;
    height: 100px; /* Adjust the height as needed */
    background-color: #f44336; /* Light grey background for visibility */
    overflow: hidden; /* Keeps children elements from overflowing */

    background-position: center;
    background-size: cover;
    border-radius: 5px;
    border: 2px solid #ee951f;
}

.progress-bar {
    background-color: rgba(76, 175, 80, 0.6); /* Green to indicate progress */
    width: 0%; /* Initial width */
    height: 100%; /* Fills the container vertically */
    transition: width 0.3s ease; /* Smooth transition for width changes */
}

.sound-bar-text {
    position: absolute;
    left: 50%; /* Position the left edge of the text at the center of the container */
    top: 10px;
    transform: translateX(-50%); /* Shift the text left by half its width to truly center it */
    z-index: 0; /* Make sure the text stays under the bar to avoid dragging issues */
    text-align: center; /* Ensure text alignment is centered, good for multi-line */

    padding: 5px 10px;
    color: black;
    background-color: rgba(255, 255, 255, 0.7);

    text-align: center; /* Center text horizontally */
    overflow: hidden; /* Prevents text from overflowing */
    width: 80%;
}

.icon {
    position: absolute;
    top: 25%; /* Adjust top positioning to center vertically */
    right: 25%; /* Places the icon to the right inside the container */
    width: 50%; /* Standard size for visibility */
    height: 50%; /* Maintain aspect ratio */
    z-index: 3; /* Ensures icon is visible above all other content */
}

.sound-bar-text, .icon {
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    pointer-events: none; /* Make sure events pass through the text and icon */
}

.modal {
    display: none; /* Hidden by default */
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: white; /* Background color */
    color: black; /* Set text color to black for contrast */
    padding: 20px;
    border: 1px solid #ccc;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
    z-index: 1000; /* Ensure it appears above other elements */
}

.modal-content {
    text-align: center;
    color: black; /* Explicitly set text color to black */
}

.close-button {
    float: right;
    font-size: 24px;
    cursor: pointer;
    color: black; /* Ensure close button is visible */
}

.progress-bar-volume {
    display: block;
    position: absolute;
    top: 0;
    bottom: 0;

    opacity: 0;
    
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;

    background-color: rgba(100,100,100,0.6);
}
.progress-bar-volume:hover {
    opacity: 1;
    transition: opacity 300ms;
}

.progress-bar-volume.plus {
    left: 50%;
    right: 0;
}
.progress-bar-volume.minus {
    left: 0;
    right: 50%;
}

.progress-bar-volume.minus:before {
    content: "";
    display: block;
    background-color: white;
    height: 2px;
    width: 20px;
    position: absolute;
    top: 75%;
    left: 50%;
    transform: translateX(-50%);
}

.progress-bar-volume.plus:before {
    content: "";
    display: block;
    background-color: white;
    height: 2px;
    width: 20px;
    position: absolute;
    top: 80%;
    left: 50%;
    transform: translateX(-50%);
}
.progress-bar-volume.plus:after {
    content: "";
    display: block;
    background-color: white;
    height: 2px;
    width: 20px;
    position: absolute;
    top: 80%;
    left: 50%;
    transform: translateX(-50%) rotate(90deg);
}

/* Styles for the dropdown menu */
.menu-dropdown {
    position: relative;  /* Relative positioning to the header */
}

.menu-button {
    font-size: 24px;  /* Size of the menu button */
    background: none;  /* No background color */
    border: none;  /* No border */
    cursor: pointer;  /* Change cursor to pointer */
}

.menu-content {
    display: none;  /* Initially hidden */
    position: absolute;  /* Absolute position relative to .menu-dropdown */
    top: 40px;  /* Adjust top position */
    right: 0;  /* Align to the right */
    background: white;  /* Background color */
    border: 1px solid #ccc;  /* Border around the menu */
    padding: 10px;  /* Padding for spacing */
    z-index: 10;  /* Ensure the menu appears on top */
    transition: all 0.3s;  /* Smooth transition for animation */
}

.menu-content a, 
.menu-content button {
    display: block;  /* Make each item a block element */
    padding: 8px 12px;  /* Padding for spacing */
    text-decoration: none;  /* No text decoration for links */
    color: black;  /* Text color */
}

.menu-content a:hover, 
.menu-content button:hover {
    background: #f1f1f1;  /* Change background on hover */
}

